[UI Fix]: Rule config components were misaligned , and now fixed (#5722)

--- a/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
+++ b/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
@@ -171,6 +171,8 @@
       gap: 8px;
       margin-left: 14px;
       align-items: center;
+      margin-top: auto;
+      margin-bottom: 5px;
     }
     .group--field--count--rule {
       gap: 8px;
